<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Timken</string>
    <string name="menu_credits">About this project</string>
    <string name="title_activity_metadata">Metadata</string>
    <string name="approach">Open this app when you\nare near these paintings</string>
    
    <string name="title1">The Piazzetta at Venice</string>
    <string name="artist1">Luca Carlevarijs</string>
    <string name="date1">1663 - 1730</string>
    <string name="nationality1">Italian</string>
    <string name="place1">Italy</string>
    <string name="dimensions1">38 x 76 7/8 in</string>
    <string name="medium1">Oil on canvas</string>
    <string name="description1">Carlevarijs was the first painter of Italian origin to specialize in views of Venice. The artist\'s many precise renditions of the city reveal his early training as a mathematician. His painting of the Piazzetta places the viewer in a boat on the Grand Canal, looking north toward the Piazza of St. Mark. The direction of the shadows from the southwest indicates that the time is afternoon. On the left are the library of Sansovino, the lower portion of its Campanile, and the column of St. Theodoric. To the right are the south side of St. Mark\'s, the Doge\'s Palace, and the column of St. Mark. The buildings, though not entirely accurate in certain architectural details, remain largely unchanged to this day.</string>
    
    <string name="title2">Saint Bartholomew</string>
    <string name="artist2">Rembrandt van Rijn</string>
    <string name="date2">ca. 1657</string>
    <string name="nationality2">Dutch</string>
    <string name="place2">Netherlands</string>
    <string name="dimensions2">48 3/8 x 39 1/4 in</string>
    <string name="medium2">Oil on canvas</string>
    <string name="description2">Known primarily for his portraits and landscapes, Rembrandt remained interested throughout his life in history and biblical painting The subject of this large, dramatic painting from the artist\'s mature period is St. Bartholomew, one of the twelve apostles. The apostle, flayed alive for his beliefs, holds in his right hand a butcher\'s knife, a symbol of his martyrdom. The saint\'s slightly unsettled pose and animated expression suggest that he is contemplating an ethical problem.\n\n

Rembrandt conveys a mood of introspection in his late works--in contrast to his earlier, more theatrical pictures--and renders light, textures, and the sense of form in space with complex schemes of loose brushwork and glazes.\n\n

Visit the Rembrandt in Southern California information site prepared by The Getty Museum.</string>
    
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="credits">This Place Sticker interface is collaborative project between the Balboa Park Online Collaborative (BPOC), Information Services International-Dentsu, Ltd., (ISID), the National Institute of Information and Communications Technology (NICT), the Pacific Rim Undergraduate Experience (PRIME) program at the University of California, San Diego\'s (UCSD) and the Timken Museum of Art.\n\n</string>
	<string name="bpoc">BPOC provides technical support to more than 20 art, science, and cultural organizations in San Diego while improving public access to their rich cultural resources. It strives to foster a culture of innovation and collaboration among nonprofit organizations through technology—preparing its members to meet the needs and expectations of the 21st century audience.\n\n</string>
	<string name="isid">Established in 1975, Information Services International-Dentsu, Ltd., (ISID) launched Japan\'s first private computer time-sharing services and has been offering several advanced services for international networks including remote data processing services, Japan\'s first international electronic mailing service, and CAE (Computer Aided Engineering) software. Making full use of its strong global network, ISID has a proven record of success in global operating systems for international finance, procurement, and distribution with major clients in related fields.\n\n</string>
	<string name="nict">NICT promotes the full spectrum of research and development in ICT from basic to applied research with an integrated perspective, and thus promotes the advancement of Japan as an intellectual nation that leads the international community. NICT forms close ties with the academic and business communities in Japan as well as with research institutes overseas and returns its research and development findings to society in a broad range of fields. In this way, NICT contributes to the creation of lifestyles that are affluent and safe, a society that is full of intellectual creativity and dynamism, and a world that values harmony and peace.\n\n</string>
	<string name="prime">The PRIME program at UCSD provides students with opportunities to participate in the international research and cultural experiences that will better prepare them to participate in the global workplace of the 21st century. The students’ research and related activities will contribute to the development of the exciting global cyberinfrastructure that brings observing platforms, computers, data, and most importantly, people together to conduct new research at leading institutions around the Pacific Rim.\n\n</string>
	<string name="timken">The Timken Museum of Art preserves the Putnam Foundation Collection of European and American art for the education and benefit of present and future generations of San Diego area residents and visitors. The museum celebrates the important role of art as a way of enriching the lives and nurturing the creative spirit in all of us. The world-class Putnam Foundation Collection is on permanent display in the Timken Museum of Art. European old master paintings, Russian icons and American art constitute the primary focus of the collection.\n\n</string>
	<string name="funding">PRIME is made possible funding from the US. National Science Foundation, with additional funding from BPOC, ISID, and NICT.</string>

</resources>